--- a/index.html
+++ b/index.html
@@ -57,5 +57,6 @@
   </main>
   
 	<script src="lightbox2-master/dist/js/lightbox-plus-jquery.min.js"></script>
+	<script src="js/scripts.js"></script>
 </body>
 </html>
